# ChessPlayerAnalyzerQt

./: ApiService.qml  CMakeLists.txt  Card.qml  ChessPlayerAnalyzerQt.pro  DashboardCard.qml  HomePage.qml  Main.qml  MetricCard.qml  MetricDisplay.qml  PlayersList.qml  README.md  ResultsPage.qml  RootLayout.qml  main.cpp  main.qml  qml.qrc  qmldir
qml/components/: MetricDisplay.qml  PlayersList.qml
qml/layouts/: RootLayout.qml
qml/pages/: HomePage.qml  ResultsPage.qml
